# drf-auth

./: pyproject.toml
drf_auth/: db.sqlite3
drf_auth/accounts/: models.py  serializer.py  urls.py  views.py
drf_auth/drf_auth/: settings.py  urls.py
